# testTasks

./: .gitignore  README.md
TcpServer/TcpServer/: CMakeLists.txt  connection.cpp  connection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
cities/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cities/db/: cities.db3
multithreadedCalc/multithreadedCalc/: CMakeLists.txt  calc.cpp  calc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
